# pypostdrop

./: README.md  pyproject.toml  setup.py
.github/workflows/: github-release.yml  pypi-publish.yml
postdrop/: __init__.py  cli.py  injector.py
