[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "postdrop"
description = "Inject mail into Postfix via cleanup socket"
authors = [
  { name = "Andreas Thienemann", email = "andreas@bawue.net" }
]
license = { text = "GPLv3+" }
readme = "README.md"
requires-python = ">=3.3"
dependencies = []

[tool.setuptools]
version = { use_scm = true }

[project.urls]
Homepage = "https://github.com/ixs/postdrop"

[project.scripts]
pypostdrop = "postdrop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
